--- a/PhantasmaMail/PhantasmaMail/Views/RegisterBoxView.xaml
+++ b/PhantasmaMail/PhantasmaMail/Views/RegisterBoxView.xaml
@@ -28,9 +28,6 @@
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
 
-            <ActivityIndicator Grid.Row="0" Grid.RowSpan="3" IsRunning="{Binding IsBusy}"
-                               HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand" Color="White" />
-
             <ffimageloading:CachedImage Grid.Row="1" Source="phantasma_logo_vector.png" WidthRequest="90"
                                         HeightRequest="75"
                                         Margin="0,40,0,10" />
@@ -40,7 +37,8 @@
                    HorizontalTextAlignment="Center" />
 
 
-            <Grid Grid.Row="3" VerticalOptions="EndAndExpand" IsVisible="{Binding IsBusy,Converter={StaticResource InverseBooleanConverter}}" RowSpacing="20">
+            <Grid Grid.Row="3" VerticalOptions="EndAndExpand"
+                  IsVisible="{Binding IsBusy,Converter={StaticResource InverseBooleanConverter}}" RowSpacing="20">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto" />
                     <RowDefinition Height="Auto" />
@@ -65,6 +63,10 @@
                         Command="{Binding CreateBoxCommand}" />
 
             </Grid>
+
+            <ActivityIndicator Grid.Row="0" Grid.RowSpan="3"
+                               IsRunning="{Binding IsBusy}" HorizontalOptions="CenterAndExpand"
+                               VerticalOptions="CenterAndExpand" Color="White" />
 
         </Grid>
     </ContentPage.Content>
