--- a/PhantasmaMail/PhantasmaMail/Views/ComposeView.xaml
+++ b/PhantasmaMail/PhantasmaMail/Views/ComposeView.xaml
@@ -36,8 +36,14 @@
                                HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand"
                                Color="White" />
 
+            <Frame Grid.Row="0" IsClippedToBounds="True" 
+                   Margin="10,-5,10,1" Opacity="0.8" 
+                   HasShadow="True"
+                   CornerRadius="0" Padding="0" />
+
             <Frame Grid.Row="0"
                    Padding="15"
+                   Margin="0,10,0,0"
                    CornerRadius="0"
                    HasShadow="True"
                    HorizontalOptions="FillAndExpand"
