--- a/PhantasmaMail/PhantasmaMail/Controls/TransactionCell.xaml
+++ b/PhantasmaMail/PhantasmaMail/Controls/TransactionCell.xaml
@@ -1,8 +1,64 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <Grid xmlns="http://xamarin.com/schemas/2014/forms" 
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="PhantasmaMail.Controls.TransactionCell">
+      xmlns:ffimageloading="clr-namespace:FFImageLoading.Forms;assembly=FFImageLoading.Forms"
+      xmlns:transformations="clr-namespace:FFImageLoading.Transformations;assembly=FFImageLoading.Transformations"
+             x:Class="PhantasmaMail.Controls.TransactionCell"
+      x:Key="TransactionCell">
 
-    
 
+    <Frame 
+        Margin="0" 
+        Padding="5"
+        CornerRadius="1" 
+        HasShadow="True" 
+        BackgroundColor="White">
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+
+            <ffimageloading:CachedImage Grid.Column="0"
+                                        Margin="2"
+                                        Grid.Row="0"
+                                        Grid.RowSpan="3"
+                                        HorizontalOptions="Center"
+                                        VerticalOptions="Center"
+                                        Source="{Binding ImagePath}"
+                                        WidthRequest="35"
+                                        HeightRequest="35"
+                                        Aspect="AspectFill">
+                <ffimageloading:CachedImage.Transformations>
+                    <transformations:CircleTransformation />
+                </ffimageloading:CachedImage.Transformations>
+            </ffimageloading:CachedImage>
+
+            <Label Grid.Row="0" Grid.Column="1" 
+                   Text="{Binding FromAddress}" 
+                   FontFamily="{StaticResource OpenSansSemiBold}"
+                   TextColor="Black"
+                   FontSize="{StaticResource LittleSize}"/>
+
+            <Label Grid.Row="1" Grid.Column="1" 
+                   TextColor="Black"
+                   Text="{Binding ., Converter={StaticResource TransactionToAmountSymbolConverter}}" 
+                   FontFamily="{StaticResource OpenSansSemiBold}"
+                   FontSize="{StaticResource LittleSize}"/>
+
+            <Label Grid.Row="2" Grid.Column="1"
+                   FontFamily="{StaticResource OpenSansSemiBold}"
+                   Text="{Binding TxHash}" 
+                   TextColor="{StaticResource LightGray}"
+                   FontSize="{StaticResource LittleSize}"/>
+
+        </Grid>
+
+
+    </Frame>
 </Grid>
