--- a/PhantasmaMail/PhantasmaMail/Controls/WalletAssetCell.xaml
+++ b/PhantasmaMail/PhantasmaMail/Controls/WalletAssetCell.xaml
@@ -7,24 +7,11 @@
       x:Class="PhantasmaMail.Controls.WalletAssetCell"
       x:Key="WalletAssetCell"
       BackgroundColor="Transparent">
-    <Grid.RowDefinitions>
-        <RowDefinition Height="Auto"/>
-    </Grid.RowDefinitions>
-    <ffimageloading:CachedImage Grid.Row="0"
-                                HorizontalOptions="Start"
-                                VerticalOptions="Center"
-                                Source="{Binding ImagePath}"
-                                WidthRequest="35"
-                                HeightRequest="35"
-                                Aspect="AspectFill">
-        <ffimageloading:CachedImage.Transformations>
-            <transformations:CircleTransformation />
-        </ffimageloading:CachedImage.Transformations>
-    </ffimageloading:CachedImage>
-    <Frame Grid.Row="0" 
-           Margin="30,0,0,0" 
+
+    <Frame Grid.Column="0" 
+           Margin="0" 
            Padding="0"
-           CornerRadius="0" 
+           CornerRadius="1" 
            HasShadow="True" 
            BackgroundColor="White">
 
@@ -34,27 +21,42 @@
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="1*"/>
                 <ColumnDefinition Width="1*"/>
             </Grid.ColumnDefinitions>
+            <ffimageloading:CachedImage Grid.Column="0"
+                                        Margin="5"
+                                        Grid.Row="0"
+                                        Grid.RowSpan="2"
+                                        HorizontalOptions="Center"
+                                        VerticalOptions="Center"
+                                        Source="{Binding ImagePath}"
+                                        WidthRequest="35"
+                                        HeightRequest="35"
+                                        Aspect="AspectFill">
+                <ffimageloading:CachedImage.Transformations>
+                    <transformations:CircleTransformation />
+                </ffimageloading:CachedImage.Transformations>
+            </ffimageloading:CachedImage>
 
-            <Label Grid.Row="0" Grid.Column="0" HorizontalTextAlignment="Start" Margin="10,5,5,0"
+            <Label Grid.Row="0" Grid.Column="1" HorizontalTextAlignment="Start" Margin="10,5,5,0"
                    Text="{Binding TokenDetails.Name}"/>
 
-            <Label Grid.Row="0" Grid.Column="1" HorizontalTextAlignment="End"  Margin="5,5,10,0"
+            <Label Grid.Row="0" Grid.Column="2" HorizontalTextAlignment="End"  Margin="5,5,10,0"
                    Text="{Binding FiatValue}"/>
 
 
-            <Label Grid.Row="1" Grid.Column="0" HorizontalTextAlignment="Start" Margin="10,5,5,5"
+            <Label Grid.Row="1" Grid.Column="1" HorizontalTextAlignment="Start" Margin="10,5,5,5"
                    Text="{Binding Amount}"/>
 
-            <Label Grid.Row="1" Grid.Column="1" HorizontalTextAlignment="End" Margin="5,5,10,5"
+            <Label Grid.Row="1" Grid.Column="2" HorizontalTextAlignment="End" Margin="5,5,10,5"
                    Text="{Binding FiatChange}"/>
 
         </Grid>
     </Frame>
 
-    
+
 
 
 </Grid>
