--- a/PhantasmaMail/PhantasmaMail/Views/TransactionHistoryView.xaml
+++ b/PhantasmaMail/PhantasmaMail/Views/TransactionHistoryView.xaml
@@ -6,9 +6,8 @@
              xmlns:controls="clr-namespace:PhantasmaMail.Controls;assembly=PhantasmaMail"
              x:Class="PhantasmaMail.Views.TransactionHistoryView">
     <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Coming soon..." HorizontalOptions="Center"/>
-            <!--<xForms:SfPullToRefresh x:Name="transactionsList" Grid.Row="2"
+        <Grid>
+            <xForms:SfPullToRefresh x:Name="transactionsList"
                                     ProgressBackgroundColor="{StaticResource Accent}"
                                     RefreshContentHeight="40"
                                     RefreshContentWidth="40"
@@ -20,25 +19,25 @@
                     <xForms1:SfListView
                         x:Name="TransactionsListView"
                         AutoFitMode="Height"
-                        ItemsSource="{Binding AssetsList, Mode=TwoWay}"
+                        ItemsSource="{Binding TransactionsList, Mode=TwoWay}"
                         SelectionBackgroundColor="{StaticResource GradientEndColor}"
-                        SelectionMode="None"
+                        SelectionMode="Single"
                         AllowSwiping="False"
                         IsStickyHeader="True"
                         ItemSpacing="15"
                         VerticalOptions="FillAndExpand">
-                        -->
-            <!--<syncfusion:SfListView.Triggers>
-                            <DataTrigger TargetType="syncfusion:SfListView"
+                        
+            <xForms1:SfListView.Triggers>
+                            <DataTrigger TargetType="xForms1:SfListView"
                                          Binding="{Binding Source={x:Reference TransactionsListView}, Path=ItemsSource.Count}"
                                          Value="0">
                                 <Setter Property="IsVisible" Value="False" />
                             </DataTrigger>
-                        </syncfusion:SfListView.Triggers>-->
-            <!--
+                        </xForms1:SfListView.Triggers>
+            
                         <xForms1:SfListView.ItemTemplate>
                             <DataTemplate>
-                                <controls:WalletAssetCell />
+                                <controls:TransactionCell />
                             </DataTemplate>
                         </xForms1:SfListView.ItemTemplate>
                         <xForms1:SfListView.HeaderTemplate>
@@ -51,7 +50,7 @@
                     </xForms1:SfListView>
                 </xForms:SfPullToRefresh.PullableContent>
 
-            </xForms:SfPullToRefresh>-->
-        </StackLayout>
+            </xForms:SfPullToRefresh>
+        </Grid>
     </ContentPage.Content>
 </ContentPage>
