--- a/PhantasmaMail/PhantasmaMail/App.xaml
+++ b/PhantasmaMail/PhantasmaMail/App.xaml
@@ -32,6 +32,7 @@
             <converters:LoginButtonBooleanToColorConverter x:Key="LoginButtonBooleanToColorConverter"/>
             <converters:LoginTextBooleanToColorConverter x:Key="LoginTextBooleanToColorConverter"/>
             <converters:TransactionToAmountSymbolConverter x:Key="TransactionToAmountSymbolConverter"/>
+            <converters:TransactionToSenderReceiverConverter x:Key="TransactionToSenderReceiverConverter"/>
 
             <!-- FONTS -->
 
